tests/gcc-torture/breakdown/fail/parsing/nestfunc-5.c
#include "cerberus.h"
/* { dg-require-effective-target trampolines } */


static void recursive (int n, void (*proc) (void))
{
  __label__ l1;

  void do_goto (void)
  {
    goto l1;
  }

  if (n == 3)
      recursive (n - 1, do_goto);
  else if (n > 0)
    recursive (n - 1, proc);
  else
    (*proc) ();
  return;

l1:
  if (n == 3)
    exit (0);
  else
    abort ();
}

int 
main (void)
{
  recursive (10, abort);
  abort ();
}
